<resources>
    <string name="app_name">Foodie</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Restaurant Name</string>
    <string name="nav_header_subtitle">restaurant_chilli@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="r_name">Name</string>
    <string name="r_email">Email</string>
    <string name="r_phone">Phone</string>
    <string name="r_description">Description</string>
    <string name="r_address">Address</string>
    <string name="r_openhours">Opening Hours</string>
    <string name="r_price">Price</string>
    <string name="r_quantity">Available Quantity</string>
    <string name="spinner_title1">From</string>
    <string name="spinner_title2">To</string>


    <string name="From">From</string>
    <string-array name="From_Array">
        <item>9</item>
        <item>4</item>
        <item>6</item>
    </string-array>

    <string name="To">From</string>
    <string-array name="To_Array">
        <item>12</item>
        <item>6</item>
        <item>10</item>
    </string-array>

</resources>
